--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -457,14 +457,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .tab-content{
-  height: max-content !important;
+  height: 760px !important;
   }
 
 }
 
 
 .tab-content{
-  height: max-content !important;
+  height: 760px !important;
 }
 
 .link-list {
